# Senn

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  LICENSE  Makefile.am  README.md  configure.ac  hachee-test.asd  hachee.asd  version.m4
debian/: autoreconf  changelog  control  copyright  fcitx5-senn.install  ibus-senn.install  rules  senn-common.install
docker/common/: kkc-builder.dockerfile  menu-builder.dockerfile
docker/fcitx-senn/: Dockerfile  README.md  build.sh  deb-builder.dockerfile  deb.dockerfile  ecl-builder.dockerfile  ecl.dockerfile  kkc-builder.dockerfile  menu-builder.dockerfile
docker/fcitx5-senn/: README.md  build.sh  deb.dockerfile  ecl.dockerfile
docker/ibus-senn/: Dockerfile  README.md  build.sh  deb-builder.dockerfile  deb.dockerfile  ecl-builder.dockerfile  ecl.dockerfile  kkc-builder.dockerfile  senn-ibus-builder.dockerfile
docker/kkc-engine/: anthy-fcitx.dockerfile  anthy-ibus.dockerfile  hachee-class-2-gram.dockerfile  hachee-lm.dockerfile  hachee-markov.dockerfile  hachee-mirror.dockerfile
docker/script/: copy-output.sh  test.sh
docker/senn/: Dockerfile  README.md  build.sh
docker/senn-common/: Dockerfile  build.sh
docker/test-senn-lib-fcitx/: Dockerfile  main.cpp
docker/test-senn-lib-fcitx-tcp-proxy/: Dockerfile  main.cpp  run.sh
docker/test-senn-lib-ibus/: Dockerfile  main.cpp
hachee/: README.md  hachee-corpus-data.asd  hachee-corpus.asd  hachee-data.asd  hachee-kkc-eval.asd  hachee-kkc-impl-class-2-gram.asd  hachee-kkc-impl-class-ngram.asd  hachee-kkc-impl-lm.asd  hachee-kkc-impl-markov.asd  hachee-kkc-impl-mirror.asd  hachee-kkc.asd  hachee-language-model.asd  hachee-predict.asd  hachee-test.asd  hachee.asd
hachee/src/: ja.lisp
package/fcitx-senn/: README.md
package/fcitx5-senn/: README.md
package/ibus-senn/: README.md
package/senn-common/: Makefile.am
senn/: .gitignore  README.md  senn-bin-fcitx-lib.asd  senn-bin-fcitx-server-stdio.asd  senn-bin-fcitx-server.asd  senn-bin-gui-menu-about.asd  senn-bin-ibus-server-tcp.asd  senn-bin-ibus-server.asd  senn-bin-kkc-engine.asd  senn-bin-kkc-proxy.asd  senn-bin-senn-ibus.asd  senn-bin-win-server-hachee.asd  senn-bin-win-server-named-pipe-engine.asd  senn-bin-win-server-named-pipe-tcp.asd  senn-bin-win-server-stdio.asd  senn-bin-win-server-tcp-hachee.asd  senn-bin-win-server-tcp.asd  senn-bin-win-server.asd  senn-fcitx-test.asd  senn-fcitx.asd  senn-gui.asd  senn-ibus-test.asd  senn-ibus.asd  senn-im-kkc-engine-test.asd  senn-im-kkc-engine.asd  senn-im-kkc-hachee.asd  senn-im-kkc-named-pipe.asd  senn-im-kkc.asd  senn-lib-fcitx-kkc-proxy.asd  senn-lib-fcitx.asd  senn-lib-ibus.asd  senn-lib-win.asd  senn-server-named-pipe.asd  senn-server-stdio.asd  senn-server-unix.asd  senn-win-test.asd  senn-win.asd  senn.asd
senn-common/package/: Makefile.am  configure.ac
senn-common/package/debian/: control  rules
senn-common/package/kkc/: Makefile.am
senn-common/package/kkc-engine-data/: class-weights.txt  class-word-counts.txt
senn-common/package/kkc/data-class-2-gram/: class-ngram-counts.txt
senn-ipc/: senn-ipc-named-pipe.asd  senn-ipc-server-named-pipe.asd  senn-ipc-server-stdio.asd  senn-ipc-server-tcp.asd  senn-ipc-server-unix.asd
senn-ipc/src/: server.lisp
senn-kkc/: senn-kkc-engine.asd  senn-kkc-hachee.asd  senn-kkc-named-pipe.asd  senn-kkc.asd
senn-kkc-engine/anthy/: Makefile  engine.cpp  utf8.h  utf8_fcitx.cpp  utf8_ibus.cpp
senn-kkc-engine/hachee/: .gitignore  engine.lisp  engine.ros  lm.lisp  main-lm.ros  main-markov.ros  markov.lisp  senn-kkc-engine-hachee-class-2-gram.asd  senn-kkc-engine-hachee-lm.asd  senn-kkc-engine-hachee-markov.asd  senn-kkc-engine-hachee-mirror.asd  senn-kkc-engine-hachee.asd  user-dict.lisp
senn-kkc-engine/yahoo-jim-v2/: engine.py
senn-kkc/src/: engine.lisp  hachee.lisp  kkc.lisp  named-pipe.lisp  request.lisp
senn-user-dict/: senn-user-dict-lm.asd  senn-user-dict-markov.asd  senn-user-dict.asd  user-dict.lisp
senn-user-dict/src/: cffi.lisp  user-dict-lm.lisp  user-dict-markov.lisp  user-dict.lisp
senn/backend/: senn-bin-fcitx-server-unix.asd  senn-fcitx-server-unix.asd  senn-fcitx.asd  senn-server-named-pipe.asd  senn-server-tcp.asd  senn-server-unix.asd  senn-win.asd  senn.asd
senn/cl/: kkc.lisp
senn/dists/fcitx-senn/frontend/: CMakeLists.txt
senn/dists/fcitx-senn/frontend/src/: CMakeLists.txt  fcitx_senn.cpp
senn/dists/ibus-senn/frontend/: Makefile.am  autogen.sh  configure.ac
senn/dists/ibus-senn/frontend/debian/: control  rules
senn/dists/ibus-senn/frontend/engine/: Makefile.am  main.cpp
senn/doc/: design.md
senn/frontend/: request.h
senn/icon/: make_icon.py
senn/package/fcitx-senn/: CMakeLists.txt  README.md  fcitx-senn.conf.in  fcitx_senn.cpp
senn/package/fcitx-senn/debian/: README.Debian  changelog  control  fcitx-senn.postinst  fcitx-senn.prerm  rules
senn/package/fcitx-senn/docker/: deb.dockerfile  deb.sh
senn/package/fcitx-senn/frontend/: CMakeLists.txt  fcitx_senn.cpp
senn/package/fcitx-senn/frontend/src/: CMakeLists.txt  fcitx_senn.cpp
senn/package/fcitx5-senn/: CMakeLists.txt  README.md  build-lib.sh  fcitx_senn.cpp  org.fcitx.Fcitx5.Addon.Senn.metainfo.xml  senn-addon.conf  senn.conf
senn/package/fcitx5-senn/debian/: README.Debian  changelog  control  copyright  fcitx5-senn.postinst  fcitx5-senn.prerm  rules
senn/package/ibus-senn/: .gitignore  Makefile.am  README.md  configure.ac  main.cpp  senn.xml.in
senn/package/ibus-senn/debian/: README.Debian  changelog  control  copyright  ibus-senn.postinst  ibus-senn.prerm  rules
senn/package/ibus-senn/docker/: deb.dockerfile
senn/package/ibus-senn/engine/: Makefile.am  main.cpp
senn/package/ibus-senn/frontend/debian/: changelog
senn/package/ibus-senn/frontend/engine/: Makefile.am  main.cpp
senn/package/ibus-senn/kkc/: Makefile.am
senn/package/senn-common/kkc/: Makefile.am
senn/patch/: ecl.patch
senn/script/: list-deps.ros  run-tests.ros  senn-ibus.ros
senn/senn/: buffer.lisp  ipc.lisp  (+4 more)
senn/senn-fcitx/: CMakeLists.txt  senn-fcitx-test.asd  senn-fcitx.asd
senn/senn-win/: senn-win.asd
src/: kkc.lisp
(+936 files in other folders)
