#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([senn_common], [0.0.9], [], [senn-common])
AM_INIT_AUTOMAKE([1.10 subdir-objects])

## The usual way to define 'am__fastdepCC' is to add 'AC_PROG_CC'
## to 'configure.ac' and run 'aclocal' and 'autoconf' again
AC_PROG_CC

## libtoolize: Consider adding 'AC_CONFIG_MACRO_DIRS([m4])' to configure.ac,
AC_CONFIG_MACRO_DIRS([m4])

# Checks for programs.
# Checks for libraries.
# Checks for header files.
# Checks for typedefs, structures, and compiler characteristics.
# Checks for library functions.
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
