#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
m4_include([../../version.m4])
AC_INIT([senn_common], m4_defn([senn_VERSION]))
AM_INIT_AUTOMAKE([foreign subdir-objects])

## The usual way to define 'am__fastdepCC' is to add 'AC_PROG_CC'
## to 'configure.ac' and run 'aclocal' and 'autoconf' again
AC_PROG_CC

## libtoolize: Consider adding 'AC_CONFIG_MACRO_DIRS([m4])' to configure.ac,
AC_CONFIG_MACRO_DIRS([m4])

# Checks for programs.
# Checks for libraries.
# Checks for header files.
# Checks for typedefs, structures, and compiler characteristics.
# Checks for library functions.
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
